--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
 
       <div class="flex flex-col items-center mt-8">
-        <h2 class="text-2xl font-bold">Coin Flip Game</h2>
+        <h2 class="text-2xl font-bold">Coin Flip Game <span id="info-icon" class="info-icon">&#9432;</span> <!-- Unicode info icon -->
+</h2>
         <p class="text-gray-400 mt-2">Bet your LUMINA and flip the coin!</p>
         
         <input type="number" id="lumina-bet" class="mt-4 p-2 bg-gray-800 text-white rounded-lg w-40 text-center" placeholder="Enter LUMINA to bet">
